# rusty-alto-gui

./: .gitignore  Cargo.toml  Info.plist  LICENSE  Packager.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/icons/: icon.icns
docs/: release-notes-0.1.0.md
src/: app.rs  app_state.rs  feature_canvas.rs  main.rs  model.rs  pdf_export.rs  platform_menu.rs  svg_view.rs  tag_folder.rs  theme.rs  tree_canvas.rs  workers.rs
src/menu/: backend.rs  iced_bar.rs  macos.rs  mod.rs  model.rs  windows.rs
