[package]
name = "rusty-alto-gui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A multi-window Iced workbench for rusty-alto"
license = "Apache-2.0"

[dependencies]
iced = { version = "0.14.0", default-features = false, features = [
    "canvas",
    "crisp",
    "advanced",
    "svg",
    "tiny-skia",
    "tokio",
    "wayland",
    "x11",
] }
packed-term-arena = "0.1.0"
rfd = "0.17.2"
rusty-alto = { path = "../rusty-alto" }
tokio = { version = "1", features = ["rt-multi-thread"] }

# Native menu bar. A top-of-screen menu bar is a macOS concept (and iced 0.13
# doesn't expose the per-window handles Windows/Linux menus need), so this is
# macOS-only for now. muda is a cross-platform menu crate, so extending to other
# platforms later means adding the dep + an init call rather than a rewrite.
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.15"
# AppKit doesn't auto-track winit's windows in the Window menu, so we add them
# ourselves via NSApplication.addWindowsItem. (objc2 versions match muda's.)
objc2-app-kit = { version = "0.2.2", features = ["NSApplication", "NSWindow", "NSResponder", "NSMenu"] }
objc2-foundation = { version = "0.2.2", features = ["NSArray", "NSString"] }

# `cargo bundle` packages a "Rusty Alto.app" whose CFBundleName drives the
# macOS menu-bar application name. See the macOS notes in the source.
[package.metadata.bundle]
name = "Rusty Alto"
identifier = "org.rustyalto.workbench"
short_description = "A single-window Iced workbench for rusty-alto"
category = "public.app-category.developer-tools"
