[package]
name = "rusty-alto-gui"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A multi-window Iced workbench for rusty-alto"
license = "Apache-2.0"
publish = false

[dependencies]
iced = { version = "0.14.0", default-features = false, features = [
    "canvas",
    "crisp",
    "advanced",
    "svg",
    "tiny-skia",
    "tokio",
    "wayland",
    "x11",
] }
packed-term-arena = "0.1.0"
rfd = "0.17.2"
rusty-alto = "0.2.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

# Export the SVG views (trees, feature structures) to PDF. usvg/resvg/tiny-skia
# are already pulled in transitively by iced's "svg"/"tiny-skia" features, so
# pinning them as direct deps reuses the same versions: the usvg::Tree we parse
# is shared by svg2pdf (PDF) and resvg (the drag thumbnail), no type mismatch.
svg2pdf = "0.13"
usvg = "0.45"
resvg = "0.45"
tiny-skia = "0.11"

# macOS + Windows platform dependencies. `drag` starts native drag-out; `muda`
# drives the native menu bar (top-of-screen on macOS, per-window HWND on
# Windows); `raw-window-handle` is used by both. On Linux there is no OS menu
# server and no drag protocol, so neither feature is wired there.
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
drag = "2.1.1"
muda = "0.15"
raw-window-handle = "0.6"

# AppKit window tracking for the macOS Window menu (objc2 versions match muda's).
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2.2", features = ["NSApplication", "NSWindow", "NSResponder", "NSMenu", "NSMenuItem"] }
objc2-foundation = { version = "0.2.2", features = ["NSArray", "NSString"] }

[profile.release]
# Release artifacts are statically linked desktop applications, so optimize for
# download size and remove symbols that are not useful to end users.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[package.metadata.packager]
product-name = "Rusty Alto"
identifier = "org.rustyalto.workbench"
before-packaging-command = "cargo build --release --locked"
out-dir = "dist"
icons = [
    "assets/icons/32x32.png",
    "assets/icons/128x128.png",
    "assets/icons/128x128@2x.png",
    "assets/icons/icon.icns",
    "assets/icons/icon.ico",
]

# `cargo bundle` packages a "Rusty Alto.app" whose CFBundleName drives the
# macOS menu-bar application name. See the macOS notes in the source.
[package.metadata.bundle]
name = "Rusty Alto"
identifier = "org.rustyalto.workbench"
short_description = "A single-window Iced workbench for rusty-alto"
category = "public.app-category.developer-tools"
